creating the pipe for pokemon scarcity

--- a/src/app/pokemons/detail-pokemon/detail-pokemon.component.html
+++ b/src/app/pokemons/detail-pokemon/detail-pokemon.component.html
@@ -23,7 +23,9 @@
                 </tr>
                 <tr>
                   <td>Rareté</td>
-                  <td><strong>{{ pokemon.scarcity}}</strong></td>
+                  <td>
+                    <strong>{{ pokemon.scarcity | pokemonScarcity }}</strong>
+                  </td>
                 </tr>
                 <tr>
                   <td>Types</td>
