--- a/src/app/pokemons/list-pokemons/pokemons.component.html
+++ b/src/app/pokemons/list-pokemons/pokemons.component.html
@@ -1,6 +1,8 @@
 <h1 class="center">Liste de Pokémons</h1>
 <div class="container">
   <div class="row">
+    <div class=" center">
+      <a (click)="goToCreate()" class=" btn-large waves-effect waves-light red" title="ajouter un pokemon">ajouter</a></div>
     <div *ngFor='let pokemon of pokemons' class="col s6 m4">
       <div class="card horizontal" (click)="selectPokemon(pokemon)" pkmnBorderCard="yellow">
         <div class="card-image">
